have added new html

--- a/templates/home.html
+++ b/templates/home.html
@@ -63,11 +63,11 @@
                   <p class="mb-0 font-semibold text-sm">Email</p>
                   <p class="mb-0">
                     <a
-                      href="mailto:support@resumewind.com"
+                      href="mailto:Alyssa.sorensen@stonybrook.edu"
                       target="_blank"
                       rel="noreferrer"
                     >
-                      support@resumewind.com
+                      Alyssa.sorensen@stonybrook.edu
                     </a>
                   </p>
                 </div>
@@ -154,11 +154,6 @@
                 <!-- Company 1 -->
                 <h4 class="mb-1 lg:mb-4">Cerner Enviza</h4>
                 <p class="text-sm mb-1">
-                  <a
-                    href="https://resumewind.com/"
-                    target="_blank"
-                    rel="noreferrer"
-                  >
                     Cernerenviza.com
                   </a>
                 </p>
@@ -172,23 +167,14 @@
                   As a business intern, I support research consultants with various
                   research studies. These studies are mainly focused within oncology 
                   and rare disease.
-                  <a
-                    href="https://resumewind.com/"
-                    target="_blank"
-                    rel="noreferrer"
-                    >external link</a
-                  >.
                 </p>
                 <p>
-                  Mauris ullamcorper neque in ultrices mollis. Sed justo eros,
-                  mollis sed odio id, finibus gravida enim. Aenean pharetra ante
-                  elit, sit amet accumsan felis suscipit vitae. Vestibulum ante
-                  ipsum primis.
+                  Day to day activities include link checking, qualitative analysis, quantitative analysis, and data logging.
+                  This is done for each research study. 
                 </p>
                 <ul>
-                  <li>Cras in erat bibendum, rhoncus nisl ac, luctus tortor</li>
-                  <li>Vivamus volutpat nunc non quam dapibus</li>
-                  <li>Nulla molestie odio odio, ut congue dui</li>
+                  <li>Link checking is referencing the questionnaire to ensure survey links that participant receive are accurate and work properly.</li>
+                  <li>Data quality check occurs after the initial soft launch of the survey.</li>
                 </ul>
               </div>
             </div>
@@ -214,9 +200,7 @@
                 <!-- Job Title 2 -->
                 <h4 class="mb-4">Emergency Medical Technician</h4>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                  Integer a imperdiet urna. Praesent eu posuere magna, in
-                  suscipit quam. Here is an example of an
+                  As an emergency medical technician I transport and treat patients with acute and chronic conditions. 
                   <a
                     href="https://resumewind.com/"
                     target="_blank"
@@ -231,9 +215,8 @@
                   ipsum primis.
                 </p>
                 <ul>
-                  <li>Cras in erat bibendum, rhoncus nisl ac, luctus tortor</li>
-                  <li>Vivamus volutpat nunc non quam dapibus</li>
-                  <li>Nulla molestie odio odio, ut congue dui</li>
+                  <li>NYS Licensed Emergency Medical Technician</li>
+                  <li>Basic Life Support and AED certified</li>
                 </ul>
               </div>
             </div>
@@ -259,9 +242,8 @@
                 <!-- Job Title 3 -->
                 <h4 class="mb-4">Physical Therapy Aide</h4>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                  Integer a imperdiet urna. Praesent eu posuere magna, in
-                  suscipit quam. Here is an example of an
+                  As a physical therapy aide, I provided hot and cold modalities, pre and post appointment. 
+                  I assisted patients using the exercise machines and equipment. 
                   <a
                     href="https://resumewind.com/"
                     target="_blank"
@@ -270,15 +252,10 @@
                   >.
                 </p>
                 <p>
-                  Mauris ullamcorper neque in ultrices mollis. Sed justo eros,
-                  mollis sed odio id, finibus gravida enim. Aenean pharetra ante
-                  elit, sit amet accumsan felis suscipit vitae. Vestibulum ante
-                  ipsum primis.
+                  Also performed administrative tasks. 
                 </p>
                 <ul>
-                  <li>Cras in erat bibendum, rhoncus nisl ac, luctus tortor</li>
-                  <li>Vivamus volutpat nunc non quam dapibus</li>
-                  <li>Nulla molestie odio odio, ut congue dui</li>
+                  <li>Direct patient care</li>
                 </ul>
               </div>
             </div>
@@ -288,9 +265,9 @@
             <!-- Profile -->
             <h3>Profile</h3>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
-              semper sapien ligula, vestibulum eleifend erat pellentesque quis.
-              Suspendisse potenti. Mauris et malesuada nisl, eu tempus nisi.
+              As a senior Health Science student with a concentration in Healthcare Informatics at Stony Brook University, I have aquired skills 
+              in direct patient contact experiences, interpersonal communication, collaborative projects, and electronic medical records. I have been working 
+              in healthcare for 3+ years and have become an active leader with strong abilities. 
             </p>
 
             <!-- Skills -->
