updated static folder

--- a/templates/home.html
+++ b/templates/home.html
@@ -121,20 +121,7 @@
                     d="M6.115 5.19l.319 1.913A6 6 0 008.11 10.36L9.75 12l-.387.775c-.217.433-.132.956.21 1.298l1.348 1.348c.21.21.329.497.329.795v1.089c0 .426.24.815.622 1.006l.153.076c.433.217.956.132 1.298-.21l.723-.723a8.7 8.7 0 002.288-4.042 1.087 1.087 0 00-.358-1.099l-1.33-1.108c-.251-.21-.582-.299-.905-.245l-1.17.195a1.125 1.125 0 01-.98-.314l-.295-.295a1.125 1.125 0 010-1.591l.13-.132a1.125 1.125 0 011.3-.21l.603.302a.809.809 0 001.086-1.086L14.25 7.5l1.256-.837a4.5 4.5 0 001.528-1.732l.146-.292M6.115 5.19A9 9 0 1017.18 4.64M6.115 5.19A8.965 8.965 0 0112 3c1.929 0 3.716.607 5.18 1.64"
                   />
                 </svg>
-
-                <!-- Contact 3 -->
-                <div class="ml-3">
-                  <p class="mb-0 font-semibold text-sm">Website</p>
-                  <p class="mb-0">
-                    <a
-                      href="https://resumewind.com"
-                      target="_blank"
-                      rel="noreferrer"
-                    >
-                      resumewind.com
-                    </a>
-                  </p>
-                </div>
+    
               </div>
             </div>
           </div>
@@ -154,10 +141,15 @@
                 <!-- Company 1 -->
                 <h4 class="mb-1 lg:mb-4">Cerner Enviza</h4>
                 <p class="text-sm mb-1">
+                    <a
+                    href="https://www.cernerenviza.com/"
+                    target="_blank"
+                    rel="noreferrer"
+                  >
                     Cernerenviza.com
                   </a>
                 </p>
-                <p class="text-sm">March. 2023 - Present</p>
+                <p class="text-sm">March 2023 - Present</p>
               </div>
 
               <div class="lg:col-span-2">
@@ -186,7 +178,7 @@
                 <h4 class="mb-1 lg:mb-4">Huntington Community First Aid Squad</h4>
                 <p class="text-sm mb-1">
                   <a
-                    href="https://resumewind.com/"
+                    href="https://hcfas.org/"
                     target="_blank"
                     rel="noreferrer"
                   >
@@ -202,11 +194,12 @@
                 <p>
                   As an emergency medical technician I transport and treat patients with acute and chronic conditions. 
                   <a
-                    href="https://resumewind.com/"
+                    href="https://hcfas.org/"
                     target="_blank"
                     rel="noreferrer"
                     >external link</a
                   >.
+                  
                 </p>
                 
                 <ul>
@@ -223,14 +216,14 @@
                 <h4 class="mb-1 lg:mb-4">Huntington Physical Therapy</h4>
                 <p class="text-sm mb-1">
                   <a
-                    href="https://resumewind.com/"
+                    href="https://hunt-pt.com/"
                     target="_blank"
                     rel="noreferrer"
                   >
                     hunt-pt.com
                   </a>
                 </p>
-                <p class="text-sm">Aug. 2021 - Jan. 2023</p>
+                <p class="text-sm">August 2021 - January 2023</p>
               </div>
 
               <div class="lg:col-span-2">
@@ -240,15 +233,17 @@
                   As a physical therapy aide, I provided hot and cold modalities, pre and post appointment. 
                   I assisted patients using the exercise machines and equipment. 
                   <a
-                    href="https://resumewind.com/"
+                    href="https://hunt-pt.com/"
                     target="_blank"
                     rel="noreferrer"
                     >external link</a
                   >.
+                  
                 </p>
                 <p>
                   Also performed administrative tasks. 
                 </p>
+
                 <ul>
                   <li>Direct patient care</li>
                 </ul>
@@ -288,7 +283,11 @@
             <!-- Education -->
             <h3 class="mt-12 lg:mt-16">Education</h3>
             <h4 class="mb-1">Stony Brook University</h4>
-            <p class="mb-1">Bachelor of Science in Health Science, concentration in Health Informatics</p>
+            <p class="mb-1">Master of Science in Applied Health Informatics, expected August 2024</p>
+            <h5 class="mb-1">Stony Brook University</h5>
+            <p class="mb-1">Bachelor of Science in Health Science, concentration in Health Informatics, graduated May 2023</p>
+            <h6 class="mb-1">Drexel University</h6>
+            <p class="mb-1">Bachelor of Science in Public Health, attended Septemeber 2019 - June 2020</p>
 
             <!-- References -->
             <h3 class="mt-12 lg:mt-16">References</h3>
